public abstract class BoardStatics {


    public static final int HEIGHT = 10;
    public static final int WIDTH = 10;


}
