public interface Fightable {

    void fight(Human human);

    void findClosestEnemy();

}