public class Human extends Character {

    public Human(){
        super();
    }


}
