public interface Positionable {

    void setxPosition(int xPosition);

    void setyPosition(int yPosition);

    void setPosition(int xPosition, int yPostion);

    int getxPosition();

    int getyPosition();
}
